# py-distfit-pro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PARAM_FIXES.txt  PHASE2_COMPLETE.md  README.de.md  README.fa.md  README.md  README_DETAILED.md  demo_plotting.py  fix_distributions.py  pyproject.toml  requirements.txt  result3.txt  setup.py  test_advanced_features.py  test_all_distributions.py  test_package_setup.py  test_plotting_i18n.py
distfit_pro/: __init__.py
distfit_pro/bootstrap/: __init__.py  hypothesis.py  methods.py
distfit_pro/core/: __init__.py  base.py  bootstrap.py  config.py  diagnostics.py  distributions.py  distributions_FIXED.py  gof_tests.py  mixture.py  model_selection.py  weighted.py
distfit_pro/fitting/: __init__.py  api.py  fitter.py
distfit_pro/gof/: __init__.py  ad_test.py  base.py  chi_square.py  cvm_test.py  ks_test.py
distfit_pro/locales/: __init__.py
distfit_pro/utils/: __init__.py  verbose.py
distfit_pro/visualization/: __init__.py  plots.py
docs/: faq.md
docs/api/: core_distributions.md  core_tests.md  index.md
docs/source/: conf.py  faq.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: bootstrap.rst  diagnostics.rst  distributions.rst  gof_tests.rst  plotting.rst  weighted.rst
docs/source/examples/: advanced.rst  basic.rst  real_world.rst
docs/source/tutorial/: 01_basics.rst  02_distributions.rst  03_fitting_methods.rst  04_gof_tests.rst  05_bootstrap.rst  06_diagnostics.rst  07_weighted_data.rst  08_visualization.rst  09_advanced.rst  index.rst
docs/source/user_guide/: bootstrap.rst  diagnostics.rst  distributions.rst  fitting.rst  gof_tests.rst  visualization.rst  weighted.rst
docs/user_guide/: 01_getting_started.md  02_distributions.md  03_estimation_methods.md  04_visualization.md  05_goodness_of_fit.md  06_advanced_topics.md
examples/: README.md  __init__.py  complete_workflow.py  phase2_demo.py  quick_test.py  verbosity_demo.py
examples/01_basic/: 01_quick_start.py  01_quickstart.py  02_fitting_single_dist.py  02_single_distribution.py  03_compare_distributions.py  03_comparing_methods.py  04_custom_distributions.py  05_goodness_of_fit.py  06_verbose_mode.py  __init__.py  distribution_comparison.py  multiple_distributions.py  quick_visualization.py  simple_fit.py  simple_fitting.py  visualization_basics.py
examples/01_basic_fitting/: 01_quick_start.py  02_basic_fitting.py  03_comparing_distributions.py  04_method_of_moments.py  05_custom_distributions.py
examples/02_distributions/: 01_continuous.py  02_discrete.py  __init__.py  continuous_distributions.py  custom_parameters.py  discrete_distributions.py  distribution_comparison.py
examples/03_advanced_fitting/: __init__.py  censored_data.py  method_comparison.py  weighted_fitting.py
examples/04_model_selection/: __init__.py  aic_bic_comparison.py  auto_selection.py  goodness_of_fit.py
examples/05_visualization/: __init__.py  interactive_plots.py  pdf_cdf_plots.py  qq_pp_plots.py
examples/06_real_world/: __init__.py  finance_analysis.py  financial_risk.py  quality_control.py  reliability_analysis.py  reliability_engineering.py
examples/07_advanced_topics/: __init__.py  bootstrap_confidence.py  custom_distributions.py  mixture_models.py
examples/07_i18n/: __init__.py  custom_locale.py  multilingual_output.py
tests/: test_api_complete.py  test_base_comprehensive.py  test_basic.py  test_bootstrap.py  test_bootstrap_complete.py  test_diagnostics.py  test_distributions.py  test_distributions_advanced1.py  test_distributions_advanced2.py  test_distributions_advanced3.py  test_distributions_basic.py  test_distributions_discrete.py  test_edge_cases_integration.py  test_fitting.py  test_gof.py  test_gof_complete.py  test_i18n.py  test_visualization_complete.py  test_weighted.py
